Fix contrast ratio

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   --clr-bg-alt: #f5eedf;
   --clr-fg: #555;
   --clr-fg-alt: #333;
-  --clr-primary: #926640;
+  --clr-primary: #8d603b;
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
